@@ -77,6 +77,7 @@ where XXXXXX is the bug number as listed below.
 n-i-bz  Fix KVM_CREATE_IRQCHIP ioctl handling
 n-i-bz  s390x: Fix memory corruption for multithreaded applications
 n-i-bz  vex arm->IR: allow PC as basereg in some LDRD cases
+n-i-bz  internal error in Valgrind if vgdb transmit signals when ptrace invoked
 
 Release 3.9.0 (31 October 2013)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
